--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,119 @@
   <title>Стартовый шаблон</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
+
 <body>
-  <h1>Добро пожаловать в Лигу А.</h1>
+  <h1>Магазин велосипедов и аксессуаров</h1>
+  <header class="header">
+    <div class="container">
+      <nav class="header__menu">
+        <ul class="header__menu-list">
+          <li><a class="header__menu-item" href="#">О нас</a></li>
+          <li><a class="header__menu-item" href="#">Виды велосипедов</a></li>
+          <li><a class="header__menu-item" href="#">Видео про велосипеды</a></li>
+          <li><a class="header__menu-item" href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="main-info">
+      <div class="container">
+        <div class="main-info__inner">
+          <div class="main-info__text">
+            <a class="main-info__logo" href="#"><img src="img/logo-desktop.svg" alt="Логотип"></a>
+            <h2 class="main-info__head">Мы продаем
+              велосипеды</h2>
+            <p>Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
+          </div>
+          <form class="main-info__form form" action="" method="POST">
+            <h4 class="form__head">Заполните поля ниже и мы подберем велосипед Вашей мечты</h4>
+            <input type="text" name="your-name" id="name" placeholder="Введите Ваше Имя" required>
+            <input type="tel" name="your-tel" id="tel" placeholder="Введите Ваш номер телефона" required>
+            <button class="form__submit" type="submit">Подобрать велосипед мечты</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <section class="facts">
+      <div class="facts__container">
+        <h3 class="facts__head">Несколько фактов о нас</h3>
+        <div class="facts__item">
+          <p>Самый широкий выбор велосипедов!</p>
+        </div>
+        <div class="facts__item">
+          <p>Доставка велосипедов по всей России!</p>
+        </div>
+        <div class="facts__item">
+          <p>Большой выбор крутых аксессуаров!</p>
+        </div>
+        <div class="facts__item">
+          <p>Профессиональные консультации!</p>
+        </div>
+      </div>
+    </section>
+    <section class="types">
+      <div class="types__container">
+        <div class="types__inner">
+          <div class="types__item">
+            <picture>
+              <img src="img/roadbike-desktop@1x.jpg" alt="Дорожный велосипед">
+            </picture>
+            <p>Дорожный велосипед</p>
+          </div>
+          <div class="types__item">
+            <picture>
+              <img src="img/mountainbike-desktop@1x.jpg" alt="Горный велосипед">
+            </picture>
+            <p>Горный велосипед</p>
+          </div>
+          <div class="types__item">
+            <picture>
+              <img src="img/childbike-desktop@1x.jpg" alt="Детский велосипед">
+            </picture>
+            <p>Детский велосипед</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="video">
+      <div class="video__container">
+        <div class="video__inner">
+          <h3 class="video__head">Видео про велосипеды</h3>
+          <p class="video__about">В этом видео мы подробно расскажем про особенности выбора велосипеда для себя.</p>
+          <div class="video__content">
+            <picture>
+              <img class="video__bg" src="img/videobg-desktop@1x.jpg" alt="Изображения велосипеда">
+            </picture>
+            <button class="video__content-btn"></button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="address">
+      <div class="address-container">
+        <div class="address__inner">
+          <h3 class="address__head">Как нас найти?</h3>
+          <p class="address__text">Мы находимся по адресу: Санкт-Петербург, ул. Большая Конюшенная, д. 19</p>
+          <iframe src="" frameborder="0"></iframe>
+          <picture class="address-image">
+            <img src="img/map-desktop@1x.jpg" alt="Изображение карты">
+          </picture>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer__mail">
+      <img src="img/icon-mail.svg" alt="значок почты">
+      <a href="mailto:puteshestviemechta@gmail.ru">puteshestviemechta@gmail.ru</a>
+    </div>
+    <div class="footer__tel">
+      <img src="img/icon-tel.svg" alt="значок телефона">
+      <a href="tel:+749978468446">+7 (499)-784-684-46</a>
+    </div>
+  </footer>
 </body>
+
 </html>
