хэдэр и форма адаптив

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
   <h1>Магазин велосипедов и аксессуаров</h1>
   <header class="header">
     <div class="container">
-      <nav class="header__menu">
+      <nav class="header__menu header__menu--active">
         <ul class="header__menu-list">
           <li><a class="header__menu-item" href="#">О нас</a></li>
           <li><a class="header__menu-item" href="#">Виды велосипедов</a></li>
@@ -25,7 +25,12 @@
         </ul>
       </nav>
       <div class="header__inner">
-        <a class="header__inner-logo" href="#"><img src="img/logo-desktop.svg" alt="Логотип"></a>
+        <div class="header__inner-wrapper">
+          <a class="header__inner-logo" href="#"><img src="img/logo-desktop.svg" alt="Логотип"></a>
+          <div class="header__inner-button header__inner-button--active">
+            <span class="header__inner-block header__inner-block--active"></span>
+          </div>
+        </div>
         <h2 class="header__inner-head">Мы продаем
           велосипеды</h2>
         <p class="header__inner-text">Наш магазин отбирает только самые лучшие велосипеды для продажи</p>
@@ -69,18 +74,22 @@
               <p>Дорожный велосипед</p>
             </div>
           </a>
-          <a href="#"><div class="types__item">
-            <picture>
-              <img src="img/mountainbike-desktop@1x.jpg" alt="Горный велосипед">
-            </picture>
+          <a href="#">
+            <div class="types__item">
+              <picture>
+                <img src="img/mountainbike-desktop@1x.jpg" alt="Горный велосипед">
+              </picture>
               <p>Горный велосипед</p>
-          </div></a>
-          <a href="#"><div class="types__item">
-            <picture>
-              <img src="img/childbike-desktop@1x.jpg" alt="Детский велосипед">
-            </picture>
+            </div>
+          </a>
+          <a href="#">
+            <div class="types__item">
+              <picture>
+                <img src="img/childbike-desktop@1x.jpg" alt="Детский велосипед">
+              </picture>
               <p>Детский велосипед</p>
-          </div></a>
+            </div>
+          </a>
         </div>
       </div>
     </section>
@@ -106,8 +115,7 @@
           <div class="address__map">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3997.1619905955367!2d30.32084686227864!3d59.93909465282492!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1601771041232!5m2!1sru!2sru"
-              width="957" height="530" style="border:0;" allowfullscreen="" aria-hidden="false"
-              tabindex="0"></iframe>
+              width="957" height="530" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
         </div>
       </div>
