--- a/source/index.html
+++ b/source/index.html
@@ -14,6 +14,9 @@
 
 
 <body>
+  <div style="display: none">
+    <include src="build/img/sprite.svg"></include>
+  </div>
   <h1>Магазин велосипедов и аксессуаров</h1>
   <header class="header">
     <div class="container">
